# c-work

./: .clang-format  .gitignore  CMakeLists.txt  Readable.h  Writable.h  cache.h  cache_test.cpp  explicit_sized.h  fileutils.h  main.cpp  point.h  point_test.cpp  result.h  result_test.cpp  split.h  split_test.cpp
